# project-euler-first100

./: .bandit  .coveragerc-clean  .cursorrules  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  GEMINI.md  Makefile  PROGRESS.md  README.md  issue_content.md  mkdocs.yml  mypy.ini  problem_signatures_analysis.md  pyproject.toml  requirements.txt  setup.cfg
.claude/commands/: gh-issue.md  new-problem.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  new-problem.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md  benchmark-results.json  generate_problem_005_visualizations.py  problem_001_benchmark.json  problem_005_benchmark.py  simple_problem_005_benchmark.py
benchmarks/aggregated/: latest.json
benchmarks/individual/: problem_001.json  problem_002.json  problem_003.json  problem_004.json  problem_005.json
benchmarks/reports/: performance_summary.txt  performance_visualization.txt
benchmarks/results/: comprehensive_benchmark_2025-07-06T18-48-04.json  comprehensive_benchmark_2025-07-06T18-52-40.json  comprehensive_benchmark_2025-07-08T23-28-27.json  comprehensive_benchmark_2025-07-08T23-59-02.json  comprehensive_benchmark_2025-07-11T13-45-52.json  comprehensive_benchmark_2025-07-13T13-55-00.json  comprehensive_benchmark_2025-07-13T14-22-59.json  comprehensive_benchmark_2025-07-13T17-23-06.json  comprehensive_benchmark_2025-07-13T17-34-43.json  comprehensive_benchmark_2025-07-13T17-35-08.json  comprehensive_benchmark_2025-07-13T18-00-10.json  comprehensive_benchmark_2025-07-14T21-45-33.json  comprehensive_benchmark_2025-07-14T22-12-47.json  comprehensive_benchmark_2025-07-14T22-24-54.json  comprehensive_benchmark_2025-07-14T22-26-06.json  comprehensive_benchmark_2025-07-16T09-04-57.json  comprehensive_benchmark_2025-07-18T00-40-33.json  comprehensive_benchmark_2025-07-18T00-46-10.json  comprehensive_benchmark_2025-07-18T00-57-57.json  comprehensive_benchmark_2025-07-18T00-58-06.json  simple_benchmark_2025-06-30T23-05-49.json  simple_benchmark_2025-06-30T23-43-59.json
data/: p022_names.txt  p059_cipher.txt  p096_sudoku.txt
docs/: README.md  benchmarks.md  coding-standards.md  contributing.md  index.md  progress.md  security.md  setup.md  testing.md  workflow.md
docs/css/: dashboard.css
docs/js/: dashboard.js  performance_data.js
docs/problems/: index.md
docs/solutions/: solution_001.md  solution_002.md  solution_003.md  solution_004.md  solution_005.md  solution_006.md  solution_007.md  solution_008.md  solution_009.md  solution_010.md  solution_012.md  solution_013.md  solution_014.md  solution_015.md  solution_016.md  solution_017.md  solution_018.md  solution_019.md  solution_020.md  solution_021.md  solution_022.md  solution_023.md  solution_024.md  solution_025.md  solution_026.md  solution_027.md  solution_028.md  solution_029.md  solution_030.md  solution_031.md  solution_032.md  solution_033.md  solution_034.md  solution_035.md  solution_036.md  solution_037.md  solution_038.md  solution_039.md  solution_040.md  solution_041.md  (+59 more)
problems/: README.md  __init__.py  problem_001.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py  problem_009.py  problem_010.py  problem_011.py  problem_012.py  problem_013.py  problem_014.py  problem_015.py  problem_016.py  problem_017.py  problem_018.py  problem_019.py  problem_020.py  problem_021.py  problem_022.py  problem_023.py  problem_024.py  problem_025.py  problem_026.py  problem_027.py  problem_028.py  problem_029.py  problem_030.py  problem_031.py  problem_032.py  problem_033.py  problem_034.py  problem_035.py  problem_036.py  problem_037.py  problem_038.py  (+62 more)
problems/lib/: __init__.py  combinatorics.py  constraint_solving.py  data_structures.py  digits.py  dynamic_programming.py  file_io.py  graph_algorithms.py  math_utils.py  matrix_utils.py  number_theory.py  primes.py  sequences.py
problems/runners/: __init__.py  base_runner.py  problem_001_runner.py  problem_002_runner.py  problem_003_runner.py  problem_004_runner.py  problem_005_runner.py  problem_006_runner.py  problem_007_runner.py  problem_008_runner.py  problem_009_runner.py  problem_010_runner.py  problem_011_runner.py  problem_012_runner.py  problem_013_runner.py  problem_014_runner.py  problem_015_runner.py  problem_016_runner.py  problem_017_runner.py  problem_018_runner.py  problem_019_runner.py  problem_020_runner.py  problem_021_runner.py  problem_022_runner.py  problem_023_runner.py  problem_024_runner.py  problem_025_runner.py  problem_026_runner.py  problem_027_runner.py  problem_028_runner.py  problem_029_runner.py  problem_030_runner.py  problem_031_runner.py  problem_032_runner.py  problem_033_runner.py  problem_034_runner.py  problem_035_runner.py  problem_036_runner.py  problem_037_runner.py  problem_038_runner.py  (+62 more)
problems/utils/: __init__.py  adaptive_benchmark.py  benchmark.py  benchmark_runner.py  benchmark_visualizer.py  comprehensive_benchmark.py  display.py  doc_updater.py  performance.py  regression_detector.py  simple_benchmark.py  simple_runner.py  visualizer.py
scripts/: generate_dashboard_data.py
solutions/: README.md  solution_001.md  solution_002.md  solution_003.md  solution_004.md  solution_005.md  solution_006.md  solution_011.md  solution_024.md
tests/: __init__.py  test_benchmark.py
tests/lib/: __init__.py  test_combinatorics.py  test_data_structures.py  test_digits.py  test_math_utils.py  test_number_theory.py  test_primes.py  test_sequences.py
tests/problems/: __init__.py  test_problem_001.py  test_problem_002.py  test_problem_003.py  test_problem_004.py  test_problem_005.py  test_problem_006.py  test_problem_007.py  test_problem_008.py  test_problem_009.py  test_problem_010.py  test_problem_011.py  test_problem_012.py  test_problem_013.py  test_problem_014.py  test_problem_015.py  test_problem_016.py  test_problem_017.py  test_problem_018.py  test_problem_019.py  test_problem_020.py  test_problem_021.py  test_problem_022.py  (+78 more)
(+3 files in other folders)
